# EG915_LIB_OTA

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  json_parser.c  main.c  main.h  ota_m95.c  ota_m95.h
main/EG915/: EG915_modem.c  EG915_modem.h  Modem_aux.c  Modem_aux.h  credentials.h  errors_modem.h
main/OTA_BLE/: gap.c
